<resources>
    <string name="app_name">Area calculator</string>
    <string name="square">square</string>
    <string name="triangle">triangle</string>
    <string name="rectangle">rectangle</string>
    <string name="circle">circle</string>
    <string name="value">Value</string>
    <string name="answer">Answer</string>
    <string name="base">Base</string>
    <string name="height">Height</string>
    <string name="calculate">Calculate</string>
    <string name="Length">length</string>
    <string name="width">width</string>
</resources>