<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".square">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="55dp"
        android:background="@color/purple_200"
        android:gravity="center"
        android:hint="@string/square"
        android:textSize="40dp"
        app:layout_constraintBottom_toTopOf="@+id/value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/value"
        android:layout_width="179dp"
        android:layout_height="54dp"
        android:layout_marginStart="126dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="106dp"
        android:layout_marginBottom="71dp"
        android:hint="@string/value"
        app:layout_constraintBottom_toTopOf="@+id/answer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/answer"
        android:layout_width="179dp"
        android:layout_height="54dp"
        android:layout_marginStart="126dp"
        android:layout_marginEnd="106dp"
        android:layout_marginBottom="21dp"
        android:hint="@string/answer"
        app:layout_constraintBottom_toTopOf="@+id/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/value" />

    <Button
        android:id="@+id/calculate"
        android:layout_width="162dp"
        android:layout_height="62dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="121dp"
        android:layout_marginBottom="214dp"
        android:text="@string/calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer" />

</androidx.constraintlayout.widget.ConstraintLayout>